--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,7 @@ repos:
     rev: 'v0.0.252'
     hooks:
     -   id: ruff
+        args: [--fix, --exit-non-zero-on-fix]
 -   repo: https://github.com/codespell-project/codespell
     rev: v2.1.0
     hooks:
