--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ sphinx-material = "^0.0.35"
 sphinx-rtd-theme = "^1.0.0"
 sphinxcontrib-mermaid = "^0.7.1"
 pre-commit = "^2.21.0"
+obspy = "^1.4.0"
 
 [tool.pytest.ini_options]
 log_cli = "True"
@@ -38,6 +39,7 @@ min_confidence = 70
 paths = ["quakesaver_client"]
 sort_by_size = true
 verbose = false
+ignore_names=["cls"]
 
 [tool.ruff]
 select = [
