--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "quakesaver-client"
 version = "0.1.0"
 description = ""
-authors = ["Maximilian Dolling <maximilian.dolling@quakesaver.net>"]
+authors = ["QuakeSaver <info@quakesaver.net>"]
 license = "BSD-3-Clause"
 readme = "README.md"
 packages = [{include = "quakesaver_client"}]
@@ -16,13 +16,12 @@ requests = "~=2.28.2"
 pytest = "^7.2.0"
 pytest-asyncio = "^0.20.3"
 pytest-cov = "^4.0.0"
-recommonmark = "^0.7.1"
-Sphinx = "^4.3.1"
-sphinx-material = "^0.0.35"
-sphinx-rtd-theme = "^1.0.0"
-sphinxcontrib-mermaid = "^0.7.1"
-pre-commit = "^2.21.0"
+Sphinx = "^6.1.0"
+sphinx-rtd-theme = "^1.2.0"
+pre-commit = "^3.1.0"
 obspy = "^1.4.0"
+myst-parser = "^0.19.1"
+toml = "^0.10.2"
 
 [tool.pytest.ini_options]
 log_cli = "True"
