--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "quakesaver-client"
-version = "0.1.0"
+version = "0.0.0"
 description = ""
 authors = ["QuakeSaver <info@quakesaver.net>"]
 license = "BSD-3-Clause"
@@ -17,11 +17,17 @@ pytest = "^7.2.0"
 pytest-asyncio = "^0.20.3"
 pytest-cov = "^4.0.0"
 Sphinx = "^6.1.0"
-sphinx-rtd-theme = "^1.2.0"
 pre-commit = "^3.1.0"
 obspy = "^1.4.0"
 myst-parser = "^0.19.1"
 toml = "^0.10.2"
+sphinx-autodoc-typehints = "^1.22"
+furo = "^2022.12.7"
+
+[tool.poetry-dynamic-versioning]
+enable = true
+vcs = "git"
+style = "semver"
 
 [tool.pytest.ini_options]
 log_cli = "True"
@@ -79,5 +85,5 @@ max-complexity = 10
 convention = "google"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
+build-backend = "poetry_dynamic_versioning.backend"
