--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -38,8 +38,10 @@ jobs:
           python-version: "3.11"
       - name: Set up poetry
         uses: Gr1N/setup-poetry@v8
-      - name: Show poetry version
-        run: poetry --version
+      - name: Install dependencies
+        run: make install
+      - name: Build docs
+        run: make docs
 #      - name: Setup Pages
 #        uses: actions/configure-pages@v3
 #      - name: Upload artifact
