add poetry plugin

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -38,6 +38,8 @@ jobs:
           python-version: "3.11"
       - name: Set up poetry
         uses: Gr1N/setup-poetry@v8
+      - name: Add poetry plugin
+        uses: poetry self add "poetry-dynamic-versioning[plugin]"
       - name: Install dependencies
         run: make install
       - name: Build docs
