--- a/.github/workflows/deploy-package-test.yml
+++ b/.github/workflows/deploy-package-test.yml
@@ -1,4 +1,4 @@
-name: Deploy static content to Pages
+name: Build and deploy package to test-pypi
 
 on:
   push:
@@ -14,14 +14,13 @@ permissions:
   id-token: write
 
 concurrency:
-  group: "pages"
+  group: "test-pypi"
   cancel-in-progress: true
 
 jobs:
   deploy:
     environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      name: pypi-test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -34,16 +33,11 @@ jobs:
         uses: Gr1N/setup-poetry@v8
       - name: Add poetry plugin
         run: poetry self add 'poetry-dynamic-versioning[plugin]'
+      - name: Configure Poetry
+        run: poetry config repositories.testpypi "https://test.pypi.org/legacy/"
       - name: Install dependencies
         run: make install
-      - name: Build docs
-        run: make docs
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: './docs/build/html'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1
+      - name: Build the package
+        run: poetry build
+      - name: Publish package
+        run: poetry publish -r testpypi -u "__token__" -p "${TEST_PYPI_TOKEN}"
