--- a/.github/workflows/deploy-package-test.yml
+++ b/.github/workflows/deploy-package-test.yml
@@ -40,4 +40,6 @@ jobs:
       - name: Build the package
         run: poetry build
       - name: Publish package
+        env:
+          TEST_PYPI_TOKEN: ${{ secrets.TEST_PYPI_TOKEN }}
         run: poetry publish -r testpypi -u "__token__" -p "$TEST_PYPI_TOKEN"
