make all project files production ready

--- a/.github/workflows/deploy-package.yml
+++ b/.github/workflows/deploy-package.yml
@@ -1,9 +1,9 @@
-name: Build and deploy package to test-pypi
+name: Build and deploy package to pypi
 
 on:
-  push:
-    branches:
-      - "main"
+  create:
+    tags:
+      - "*.*.*"
 
   workflow_dispatch:
 
@@ -13,13 +13,13 @@ permissions:
   id-token: write
 
 concurrency:
-  group: "test-pypi"
+  group: "pypi"
   cancel-in-progress: true
 
 jobs:
   deploy:
     environment:
-      name: pypi-test
+      name: pypi
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -32,13 +32,11 @@ jobs:
         uses: Gr1N/setup-poetry@v8
       - name: Add poetry plugin
         run: poetry self add 'poetry-dynamic-versioning[plugin]'
-      - name: Configure Poetry
-        run: poetry config repositories.testpypi "https://test.pypi.org/legacy/"
       - name: Install dependencies
         run: make install
       - name: Build the package
         run: poetry build
       - name: Publish package
         env:
-          TEST_PYPI_TOKEN: ${{ secrets.TEST_PYPI_TOKEN }}
-        run: poetry publish -r testpypi -u "__token__" -p "$TEST_PYPI_TOKEN"
+          PYPI_TOKEN: ${{ secrets.PYPI_TOKEN }}
+        run: poetry publish -u "__token__" -p "$PYPI_TOKEN"
