--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,10 +1,9 @@
 name: Deploy static content to Pages
 
 on:
-  push:
-    branches:
-      - "add-base-structure"
-      - "main"
+  create:
+    tags:
+      - "*.*.*"
 
   workflow_dispatch:
 
