--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "quakesaver-client"
 version = "0.0.0"
-description = ""
+description = "Client library for interacting with the QuakeSaver sensor fleet."
 authors = ["QuakeSaver <info@quakesaver.net>"]
 license = "BSD-3-Clause"
 readme = "README.md"
@@ -84,7 +84,6 @@ target-version = "py310"
 [tool.ruff.per-file-ignores]
 # due to autogeneration
 "quakesaver_client/models/data_products.py" = ["D100", "D101", "D106", "F722", "F821"]
-"quakesaver_client/models/sensor_configs.py" = ["D100", "D101", "D106", "F722", "F821"]
 "quakesaver_client/models/sensor_state.py" = ["D100", "D101", "D106", "F722", "F821"]
 
 [tool.ruff.mccabe]
