run local sensor tests only conditionally

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@ exclude = [
     "__pypackages__",
     "build",
     "dist",
+    "tests/conftest.py"
 ]
 line-length = 88
 target-version = "py310"
