--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ documentation = "https://quakesaver.github.io/quakesaver-client/"
 python = ">=3.9, <3.12"
 pydantic = "~=1.10.5"
 requests = "~=2.28.2"
+aiohttp = "^3.8.4"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
@@ -77,6 +78,7 @@ exclude = [
     "__pypackages__",
     "build",
     "dist",
+    "tests/conftest.py"
 ]
 line-length = 88
 target-version = "py310"
