--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,41 +1,38 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
-default_language_version:
-    python: python3.10
-
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v3.2.0
     hooks:
-    -   id: check-added-large-files
-    -   id: trailing-whitespace
+      - id: check-added-large-files
+      - id: trailing-whitespace
         args:
-            - --markdown-linebreak-ext=md
-    -   id: end-of-file-fixer
-    -   id: check-json
-    -   id: check-toml
-    -   id: check-yaml
+          - --markdown-linebreak-ext=md
+      - id: end-of-file-fixer
+      - id: check-json
+      - id: check-toml
+      - id: check-yaml
         args: [--allow-multiple-documents]
-- repo: https://github.com/jendrikseipp/vulture
-  rev: 'v2.3'  # or any later Vulture version
-  hooks:
-    - id: vulture
--   repo: https://github.com/psf/black
+  - repo: https://github.com/jendrikseipp/vulture
+    rev: "v2.3" # or any later Vulture version
+    hooks:
+      - id: vulture
+  - repo: https://github.com/psf/black
     rev: 22.3.0
     hooks:
-    -   id: black
--   repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: 'v0.0.252'
+      - id: black
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: "v0.0.252"
     hooks:
-    -   id: ruff
+      - id: ruff
         args:
-        -   "--fix"
-        -   "--exit-non-zero-on-fix"
--   repo: https://github.com/codespell-project/codespell
+          - "--fix"
+          - "--exit-non-zero-on-fix"
+  - repo: https://github.com/codespell-project/codespell
     rev: v2.1.0
     hooks:
-    -   id: codespell
+      - id: codespell
         name: codespell
         args:
-        -   "--write-changes"
+          - "--write-changes"
         exclude: \.(jinja2|js)$
