exclude uv.lock from codespell

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,4 +35,4 @@ repos:
         name: codespell
         args:
           - "--write-changes"
-        exclude: \.(jinja2|js)$
+        exclude: \.(jinja2|js)|uv.lock$
