--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -29,10 +29,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      - name: Set up poetry
-        uses: Gr1N/setup-poetry@v8
-      - name: Add poetry plugin
-        run: poetry self add 'poetry-dynamic-versioning[plugin]'
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v6
       - name: Install dependencies
         run: make install
       - name: Build docs
