--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,8 +20,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Set up poetry
-        uses: Gr1N/setup-poetry@v8
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v6
       - name: Install
         run: make install_dependencies
       - name: Run tests
